manifest/istio-config/addons/istio-grafana-network.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-grafana
  namespace: istio-system
spec:
  hosts:
    - "istio-grafana.choshsh.com"
  gateways:
    - default/choshsh-gateway
  http:
    - name: "grafana-http"
      match:
        - port: 80
      route:
        - destination:
            host: grafana
            subset: grafana-subset
            port:
              number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-grafana
  namespace: istio-system
spec:
  host: grafana
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
    - name: grafana-subset
      labels:
        app: grafana
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
