manifest/istio-config/addons/istio-kiali.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-kiali-route
  namespace: istio-system
spec:
  hosts:
    - "istio-kiali.choshsh.com"
  gateways:
    - default/choshsh-gateway
  http:
    - name: "kiali-http"
      match:
        - port: 80
      route:
        - destination:
            host: kiali
            subset: kiali-subset
            port:
              number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: kiali-dr
  namespace: istio-system
spec:
  host: kiali
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
  subsets:
    - name: kiali-subset
      labels:
        app: kiali
      trafficPolicy:
        loadBalancer:
          simple: ROUND_ROBIN
